Created connection.cpp for wifi/mqtt connection functions

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,12 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+env_extra = 
+	-D WIFI_SSID=${WIFI_SSID} 
+	-D WIFI_PASSWORD=${WIFI_PASSWORD}
+	-D TB_MQTT_SERVER=${TB_MQTT_SERVER}
+	-D TB_MQTT_PORT=${TB_MQTT_PORT}
+lib_deps = 
+    WiFi
+	bblanchon/ArduinoJson@^7.0.4
+	knolleary/PubSubClient@^2.8
