--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ env_extra =
 	-D WIFI_PASSWORD=${WIFI_PASSWORD}
 	-D TB_MQTT_SERVER=${TB_MQTT_SERVER}
 	-D TB_MQTT_PORT=${TB_MQTT_PORT}
+	-D TB_DEVICE_TOKEN=${TB_DEVICE_TOKEN}
 lib_deps = 
     WiFi
 	bblanchon/ArduinoJson@^7.0.4
