Added script to set env variables

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,12 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-env_extra = 
-	-D WIFI_SSID=${WIFI_SSID} 
-	-D WIFI_PASSWORD=${WIFI_PASSWORD}
-	-D TB_MQTT_SERVER=${TB_MQTT_SERVER}
-	-D TB_MQTT_PORT=${TB_MQTT_PORT}
-	-D TB_DEVICE_TOKEN=${TB_DEVICE_TOKEN}
+extra_scripts =
+	pre:env-extra.py
 lib_deps = 
     WiFi
 	bblanchon/ArduinoJson@^7.0.4
