--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,15 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
 extra_scripts =
 	pre:env-extra.py
+build_flags =
+  -DWIFI_SSID="$WIFI_SSID"
+  -DWIFI_PASSWORD="$WIFI_PASSWORD"
+  -DTB_MQTT_SERVER="$TB_MQTT_SERVER"
+  -DTB_MQTT_PORT=$TB_MQTT_PORT
+  -DTB_DEVICE_TOKEN="$TB_DEVICE_TOKEN"
 lib_deps = 
     WiFi
 	bblanchon/ArduinoJson@^7.0.4
