Added env variables configuration to not expose secrets

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,20 +7,24 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+; https://community.platformio.org/t/how-should-i-store-wifi-credentials-in-public-project/38118
+
+[platformio]
+extra_configs =
+  config.ini
 
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-extra_scripts =
-	pre:env-extra.py
 build_flags =
-  -DWIFI_SSID="$WIFI_SSID"
-  -DWIFI_PASSWORD="$WIFI_PASSWORD"
-  -DTB_MQTT_SERVER="$TB_MQTT_SERVER"
-  -DTB_MQTT_PORT=$TB_MQTT_PORT
-  -DTB_DEVICE_TOKEN="$TB_DEVICE_TOKEN"
+    '-D WIFI_SSID=${secret.wifi_ssid}'
+    '-D WIFI_PASSWORD=${secret.wifi_password}'
+    '-D TB_MQTT_SERVER=${secret.tb_mqtt_server}'
+    '-D TB_MQTT_PORT=${secret.tb_mqtt_port}'
+    '-D TB_DEVICE_TOKEN=${secret.tb_device_token}'
+
 lib_deps = 
     WiFi
 	bblanchon/ArduinoJson@^7.0.4
