--- a/platformio.ini
+++ b/platformio.ini
@@ -7,25 +7,24 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-; https://community.platformio.org/t/how-should-i-store-wifi-credentials-in-public-project/38118
 
 [platformio]
-extra_configs =
-  config.ini
+extra_configs = 
+	config.ini
 
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-build_flags =
-    '-D WIFI_SSID=${secret.wifi_ssid}'
-    '-D WIFI_PASSWORD=${secret.wifi_password}'
-    '-D TB_MQTT_SERVER=${secret.tb_mqtt_server}'
-    '-D TB_MQTT_PORT=${secret.tb_mqtt_port}'
-    '-D TB_DEVICE_TOKEN=${secret.tb_device_token}'
-
+build_flags = 
+	'-D WIFI_SSID=${secret.wifi_ssid}'
+	'-D WIFI_PASSWORD=${secret.wifi_password}'
+	'-D TB_MQTT_SERVER=${secret.tb_mqtt_server}'
+	'-D TB_MQTT_PORT=${secret.tb_mqtt_port}'
+	'-D TB_DEVICE_TOKEN=${secret.tb_device_token}'
 lib_deps = 
-    WiFi
+	WiFi
 	bblanchon/ArduinoJson@^7.0.4
 	knolleary/PubSubClient@^2.8
+	bogde/HX711@^0.7.5
